@@ -23,7 +23,7 @@
 
 	$TRANSLATION=array(
 
-	'S_DATE_FORMAT_YMDHMS'=>			'd M H:m:s',
+	'S_DATE_FORMAT_YMDHMS'=>			'd M H:i:s',
 	'S_DATE_FORMAT_YMD'=>			'd M Y',
 	'S_TIMELINE_DATE_FORMAT'=>			'd.M',
 	'S_HTML_CHARSET'=>			'UTF-8',
@@ -131,8 +131,8 @@
 	'S_DISCOVERED_DEVICE'=>			'gefundenes Gerät',
 	'S_MONITORED_HOST'=>			'überwachter Host',
 	'S_INCORRECT_IP_RANGE'=>			'falscher IP Bereich',
-	'S_AUDITACTS_DESCRIPTION_DATE_FORMAT'=>			'd M Y H:m:s',
-	'S_AUDITLOGS_RECORD_DATE_FORMAT'=>			'd M Y H:m:s',
+	'S_AUDITACTS_DESCRIPTION_DATE_FORMAT'=>			'd M Y H:i:s',
+	'S_AUDITLOGS_RECORD_DATE_FORMAT'=>			'd M Y H:i:s',
 	'S_DETAILS_OF_SCENARIO'=>			'Details des Szenarios',
 	'S_DETAILS_OF_SCENARIO_BIG'=>			'DETAILS DES SZENARIOS',
 	'S_SPEED'=>			'Geschwindigkeit',
@@ -149,8 +149,8 @@
 	'S_STATUS_OF_WEB_MONITORING'=>			'Status der Webüberwachung',
 	'S_STATUS_OF_WEB_MONITORING_BIG'=>			'STATUS DER WEBÜBERWACHUNG',
 	'S_STATE'=>			'Status',
-	'S_WEB_SCENARIO_DATE_FORMAT'=>			'd M Y H:m:s',
-	'S_WEB_SCENARIO_IDLE_DATE_FORMAT'=>			'd M Y H:m:s',
+	'S_WEB_SCENARIO_DATE_FORMAT'=>			'd M Y H:i:s',
+	'S_WEB_SCENARIO_IDLE_DATE_FORMAT'=>			'd M Y H:i:s',
 	'S_SORT'=>			'sortieren',
 	'S_STATUS_CODES'=>			'Status Codes',
 	'S_WEB'=>			'Web',
@@ -223,9 +223,9 @@
 	'S_INSTALLATION_UPDATE'=>			'Installation/Update',
 	'S_ZABBIX_IS_UNAVAILABLE'=>			'Zabbix ist vorübergehend nicht erreichbar',
 	'S_REQUIRE_MB_STRING_MODULE'=>			'Es wird ein MultiByte String-Modul benötigt, um das Frontend zu starten',
-	'S_HISTORY_OF_ACTIONS_DATE_FORMAT'=>			'd M Y H:m:s',
-	'S_EVENT_ACTION_MESSAGES_DATE_FORMAT'=>			'd M Y H:m:s',
-	'S_EVENT_ACTION_CMDS_DATE_FORMAT'=>			'Y.M.d H:m:s',
+	'S_HISTORY_OF_ACTIONS_DATE_FORMAT'=>			'd M Y H:i:s',
+	'S_EVENT_ACTION_MESSAGES_DATE_FORMAT'=>			'd M Y H:i:s',
+	'S_EVENT_ACTION_CMDS_DATE_FORMAT'=>			'Y.M.d H:i:s',
 	'S_TIME_ZONE'=>			'Zeitzone',
 	'S_DO_NOT_KEEP_HISTORY_OLDER_THAN'=>			'Verlauf löschen nach (in Tagen)',
 	'S_DO_NOT_KEEP_TRENDS_OLDER_THAN'=>			'Trend löschen nach (in Tagen)',
@@ -251,8 +251,8 @@
 	'S_CANNOT_ACKNOWLEDGE_EVENT'=>			'Kann Ereignis nicht bestätigen',
 	'S_SYS_BULK_ACKNOWLEDGE'=>			'----[Massenbestätigung]----',
 	'S_BULK_ACKNOWLEDGE'=>			'Massenbestätigung',
-	'S_ACKNOWLEDGE_DATE_FORMAT'=>			'd M Y H:m:s',
-	'S_ACKNOWINC_BY_EVENTS_DATE_FORMAT'=>			'd M Y H:m:s',
+	'S_ACKNOWLEDGE_DATE_FORMAT'=>			'd M Y H:i:s',
+	'S_ACKNOWINC_BY_EVENTS_DATE_FORMAT'=>			'd M Y H:i:s',
 	'S_IMMEDIATELY'=>			'Zur Zeit',
 	'S_INFINITY'=>			'Unendlich',
 	'S_RECOVERY_MESSAGE'=>			'Wiederherstellungsnachricht',
@@ -390,15 +390,15 @@
 	'S_SELECT_GRAPH_DOT_DOT_DOT'=>			'Graph wählen ...',
 	'S_FULLSCREEN'=>			'Vollbild',
 	'S_VIEW'=>			'Ansicht',
-	'S_CCHARTS_TIMELINE_HOURS_FORMAT'=>			'H:m',
+	'S_CCHARTS_TIMELINE_HOURS_FORMAT'=>			'H:i',
 	'S_CCHARTS_TIMELINE_DAYS_FORMAT'=>			'D',
 	'S_CCHARTS_TIMELINE_MONTHDAYS_FORMAT'=>			'd.m',
-	'S_CCHARTS_TIMELINE_START_DATE_FORMAT'=>			'd.m H:m',
-	'S_CCHARTS_TIMELINE_END_DATE_FORMAT'=>			'd.m H:m',
-	'S_CCHARTS_TIMELINE_MAINPERIOD_HOURS_FORMAT'=>			'H:m',
-	'S_CCHARTS_TIMELINE_MAINPERIOD_FULL_DAY_TIME_FORMAT'=>			'd.m H:m',
+	'S_CCHARTS_TIMELINE_START_DATE_FORMAT'=>			'd.m H:i',
+	'S_CCHARTS_TIMELINE_END_DATE_FORMAT'=>			'd.m H:i',
+	'S_CCHARTS_TIMELINE_MAINPERIOD_HOURS_FORMAT'=>			'H:i',
+	'S_CCHARTS_TIMELINE_MAINPERIOD_FULL_DAY_TIME_FORMAT'=>			'd.m H:i',
 	'S_CCHARTS_TIMELINE_MAINPERIOD_MONTHDAYS_FORMAT'=>			'd.m',
-	'S_CUSER_ERROR_DATE_FORMAT'=>			'd.m Y H:m',
+	'S_CUSER_ERROR_DATE_FORMAT'=>			'd.m Y H:i',
 	'S_GUI'=>			'GUI',
 	'S_DROPDOWN_REMEMBER_SELECTED'=>			'erinnere selektierte',
 	'S_MAX_IN_TABLE'=>			'Max Anzahl der anzuzeigenden Elemente einer Tabellenzelle',
